--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,6 +5,7 @@
     color: $white-color;
 
     &--1 {
+        position: relative;
         font-size: $font-size-4;
         line-height: 75px;
         margin-top: 220px;
@@ -21,6 +22,7 @@
         font-size: $font-size-4;
         line-height: 75px;
         font-weight: $font-weight-light;
+
         @include small-up {
             font-size: $font-size-5;
         }
